--- a/modules/common/src/main/res/values/strings.xml
+++ b/modules/common/src/main/res/values/strings.xml
@@ -4,7 +4,15 @@
     <string name="navigation.graph.title.music">Music</string>
     <string name="navigation.graph.title.playlist">Playlist</string>
 
-    <!-- Screen -->
+    <!-- Screen Title -->
     <string name="screen.title.music">Music</string>
     <string name="screen.title.playlist">Playlist</string>
+
+    <!-- Buttons -->
+    <string name="button.see.all">See all</string>
+
+    <!-- Music Category Type -->
+    <string name="music.category.type.rock">Rock</string>
+    <string name="music.category.type.blues">Blues</string>
+    <string name="music.category.type.jazz">Jazz</string>
 </resources>
